add hangfire and products for users
